svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
spec:
  clusterIP: None # headless
  selector:
    app: demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
    - protocol: TCP
      port: 443
      targetPort: 8443
      name: https
